# Beacon

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  package.json  pyproject.toml
corpus/models/: 优化模型.md  回归与预测.md  微分方程.md  排队论.md  评价模型.md
docs/: README.md  beacon-full-pipeline-root-cause-20260717.md  beacon-resilient-execution.md  llm-timeout-retry-redesign.md  paper-content-quality.md  plan-c-runbook.md  problem-blueprint-implementation-plan.md  writer-quality-recovery-development.md
frontend/: README.md  app.js  index.html  providers.json  server.mjs  server.test.mjs  styles.css
frontend/lib/: shared.mjs
frontend/routes/: config.mjs  env.mjs  onboarding.mjs
scripts/: e2e_phase1_real.py  e2e_plan_c.py  e2e_plan_d.py  e2e_table_assembler.py  extract_file_meta.py  probe_analyst_once.py  probe_analyst_raw.py  quick_pdf_test.py  render_content_optimized_reference.py  repair_final_run.py  run_e2e_test.py  run_fast_e2e.py  run_real_full_pipeline.py  simulate_pipeline_reality.py  start.bat  start.sh  test_latex_escape_regression.py  test_latex_real_xelatex.py
src/math_agent/: checkpointing.py  cli.py  config.py  errors.py  graph.py  llm.py  llm_worker.py  retry.py  routing.py  run_lock.py  state.py  supervisor.py  tracing.py  transport.py
tests/: conftest.py  test_checkpointing.py  test_cli.py  test_coder_baseline.py  test_errors.py  test_graph_full_smoke.py  test_graph_smoke.py  test_llm.py  test_llm_phase_a.py  test_llm_worker.py  test_problem_blueprint_schema.py  test_report.py  test_retry.py  test_router_error_classification.py  test_routing.py  test_run_lock.py  test_runner.py  test_state.py  test_supervisor.py  test_table_assembler.py  test_tracing.py
tests/bench/: conftest.py  test_evaluate_plan_d.py  (+2 more)
(+118 files in other folders)
