[project]
name = "math-agent"
version = "0.1.0"
description = "Multi-agent system for math modeling competition papers"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "litellm>=1.40.0",
    "pydantic>=2.7",
    "typer>=0.12",
    "python-dotenv>=1.0",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "scipy>=1.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
]

[project.scripts]
math-agent = "math_agent.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
