[project]
name = "math-agent"
version = "0.1.0"
description = "Multi-agent system for math modeling competition papers"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langgraph-checkpoint-sqlite>=2.0",
    "litellm>=1.40.0",
    "pydantic>=2.7",
    "jinja2>=3.1",
    "typer>=0.12",
    "python-dotenv>=1.0",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "scipy>=1.12",
    "pillow>=10.0",
    "tenacity>=8.2,<9",
    "sqlite-vec>=0.1,<0.2",
    "pypdf>=4.0,<5",
    "rich>=13.7,<14",
    "requests>=2.31",
    "openpyxl>=3.1",
    "python-docx>=1.1",
    "pymupdf",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
]

[project.scripts]
math-agent = "math_agent.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
